k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: connections-deployment
  labels:
    app: connections
spec:
  replicas: 2
  selector:
    matchLabels:
      app: connections
  template:
    metadata:
      labels:
        app: connections
    spec:
      serviceAccountName: connections-service  # This comes from cluster/sa.yml
      containers:
        - name: connections
          image: vishnukrajan007/connections-app:latest
          ports:
            - containerPort: 80
