k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: connections-service
spec:
  type: LoadBalancer
  selector:
    app: connections
  ports:
    - port: 80
      targetPort: 8080
